pl0mod.grammar
<program>            --> <block>"."

<block>              --> <constants>? <variables>? <procedures>? <statement>?

<constants>          --> "CONST" <constdecl> ";"

<constdecl>          --> <constdef> "," <constdecl>
                       | <constdef>

<constdef>           --> <Ident> "=" <Number>

<variables>          --> "VAR" <vardecl> ";"

<vardecl>            --> <Ident> "," <vardecl>
                       | <Ident>

<arg>            --> <Ident> "," <arg>
                       | <Ident>

<procedures>         --> <procdecl> <procedures>?

<procdecl>           --> "PROCEDURE" <Ident> <arg>? ";" <block> ";"

<statement>          --> <Ident> "<-" <expression>
                       | "RETURN" <Ident>
                       | "CALL" (<Ident> "<-")? <Ident> <arg>?
                       | "BEGIN" <compound statement> "END"
                       | "IF" "NOT"? <condition> "THEN" <statement>
                       | "WHILE" "NOT"? <condition> "DO" <statement>
                       | "PRINT" <expression>

<compound statement> --> (<statement> ";")*

<condition>          --> "ODD" <expression>
                       | "EVEN" <expression>
                       | <expression> <relation> <expression>

<relation>           --> "="
                       | "#"
                       | "<"
                       | "<="
                       | ">"
                       | ">="
                       | "/?"

<expression>         --> <sign>? <term> <terms>?

<sign>               --> "+"
                       | "-"

<terms>              --> "+" <term>
                       | "-" <term>

<term>               --> <factor> <factors>?

<factors>            --> "/" <factor>
                       | "*" <factor>

<factor>             --> <Ident>
                       | <Number>
                       | "(" <expression> ")"
